fix: fix build to relative paths

--- a/view/index.html
+++ b/view/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="搓什么曲子，走了。"/>
     <meta name="keywords" content="blacker生涯模拟器 人生重开模拟器 liferestart life restart remake 人生重来"/>
     <title>blacker生涯模拟器</title>
-    <script>    
+    <script>
       (function(win, export_obj) {
           win['TeaAnalyticsObject'] = export_obj;
           if (!win[export_obj]) {
@@ -15,7 +15,7 @@
                   _collect.q.push(arguments);
               }
               _collect.q = _collect.q || [];
-              win[export_obj] = _collect;            
+              win[export_obj] = _collect;
           }
           win[export_obj].l = +new Date();
       })(window, 'collectEvent');
@@ -36,14 +36,14 @@
       // })
   </script>
   <script>
-    const BASE_PATH = '';
+    const BASE_PATH = './';
     const DARK_CSS = BASE_PATH + 'dark.css?ver=123456';
     const LIGHT_CSS =  BASE_PATH + 'light.css?ver=123456';
     const SHARE_CSS = BASE_PATH + 'share.css?ver=123';
     const BUNDLE_JS = BASE_PATH + '/bundle.js?ver=123456789';
     document.write('<link id="themeLink" rel="stylesheet" href="' + DARK_CSS + '">');
     document.write('<link rel="stylesheet" href="' + SHARE_CSS + '">');
-    
+
   </script>
 </head>
 <body>
